[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.12, 0.16, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Backbay Imperium"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "A 4X Strategy Game"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="LocalGameButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Local Game"

[node name="MultiplayerButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Multiplayer"

[node name="Spacer2" type="Control" parent="VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="QuitButton" type="Button" parent="VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Quit"
